@@ -10,7 +10,7 @@ if "Linux" == system():
 
 setup(
     name = "ubuild",
-    version = "0.1.1",
+    version = "0.1.2",
     author = "Jeff Rimko",
     author_email = "jeffrimko@gmail.com",
     description = "A no-frills build script framework.",
