@@ -1,5 +1,12 @@
 = Ubuild Changelog
 
+== ubuild-0.1.2 (2018-08-09)
+=== Added
+  - Build menu header now defaults to `Ubuild`.
+
+=== Changed
+  - Can now specify function `args` and `kwargs` as normal non-keyword arguments (3 and 4) to the `menu()` decorator.
+
 == ubuild-0.1.1 (2018-08-09)
 === Highlights
   - No functional changes, only doc and requirement updates.
